2007-02-17  Julian Lamb

	* src/pick-and-place.c, src/pick-and-place.h, src/gerbv.c,
	  src/csv.c:
	  Get example/protel-pnp/Pick*.csv to load through the normal
	  file loading code, implementing some simple logic to try
	  and guess if a given file is pick and place data.

2007-02-16  Julian Lamb

	* src/pick-and-place.c, src/pick-and-place.h, src/gerbv.c:
	  Continue cleaning up pick-and-place code into simple
	  parser/renderer.

2007-02-15  Julian Lamb

	* src/search.c, src/search.h, src/search-gui.c,
	  src/search-gui.h, src/search-cb.c, src/search-cb.h,
	  src/search-file.c, src/search-file.h, src/search-mark.c,
	  src/search-mark.h, src/pick-and-place.c,
	  src/pick-and-place.h, src/Makefile.am: Remove all
	  search* files, and combine important functions into
	  pick-and-place.[ch].
	* src/gerbv.c, src/project.c: Remove gui-related references
	  to pick and place functions in preparation for moving
	  pick-and-place functionality to a simple parser/renderer.

2006-07-26  Stefan Petersen  <spe@localhost.localdomain>

	* src/log.c: Rewritten by Dino to use GTK2. The 
	  previous caused SEGVs, so it was time to get
	  it exchanged.

2006-07-25  Stefan Petersen  <spe@localhost.localdomain>

        * loads of files: Added check of return value for
          error checking.
	
	* configure.in, man/gerbv.1.in, src/Makefile.am:
          Remade build system so it should be able to handle
          autoconf 2.60 and automake 1.9. Thanks FSF for yet
          again breaking a working API.
 
2006-07-24  Stefan Petersen  <spe@localhost.localdomain>

	* src/gerb_file.c: Fixed bug #1236047, so now gerbv handles
	  negative coordinates.

	* src/gerb_file.c, src/gerbv.c: Hopefully reduce SEGVs
	  even more by better error checking of operations in
	  gerb_fclose.

2006-07-23  Stefan Petersen  <spe@localhost.localdomain>

	* src/gerb_image.h, src/gerber.c, gerbv.c: Added patch from
	  extensive (Sourceforge alias) that according to him make