@@ -1,0 +1,54 @@
+# $Id$
+# PcbXY Version 1.0
+# Date: Thu Feb 22 02:52:36 2007 UTC
+# Author: Julian Lamb
+# Title: (unknown) - PCB X-Y
+# RefDes, Description, Value, X, Y, rotation, top/bottom
+# X,Y in mils.  rotation in degrees.
+# --------------------------------------------
+J2,"3 TERM BLOCK","DK ED1602-ND",1501.00,2925.00,180,top
+U6,"RS422 Transciever","LTC490",855.00,745.00,270,top
+U5,"PIC16C54A","PIC16C54",1595.00,710.00,0,top
+C17,"SMD Cap","(unknown)",2155.00,715.00,270,top
+C13,"SMD 0805","(unknown)",2525.00,1465.00,270,top
+C16,"SMD 0805","(unknown)",1125.00,1355.00,0,top
+C14,"SMD 0805","(unknown)",1175.00,1735.00,90,top
+C15,"SMD Cap","(unknown)",1280.00,1685.00,270,top
+C10,"SMD 0805","(unknown)",2140.00,1310.00,0,top
+C12,"SMD Cap","(unknown)",2445.00,1320.00,0,top
+R13,"R 0.25W","100",1330.00,1435.00,0,top
+R14,"R 0.25W","100",905.00,1075.00,180,top
+R11,"R 0.5W","(unknown)",2815.00,1300.00,270,top
+U3,"TK11950","5.0V",2298.50,1547.33,90,top
+U4,"TK11950","5.0V",1116.50,1552.67,270,top
+C5,"SMD 0805","(unknown)",1450.00,1315.00,180,top
+C11,"SMD 0805","(unknown)",2225.00,1420.00,180,top
+C9,"SMD Cap","(unknown)",2130.00,1185.00,0,top
+R7,"R 0.25W","100",1855.00,2065.00,0,top
+C8,"SMD Cap","(unknown)",2130.00,1075.00,0,top
+C7,"SMD Cap","(unknown)",1430.00,1075.00,180,top
+C2,"SMD Cap","(unknown)",1845.00,1845.00,180,top
+C6,"SMD Cap","(unknown)",1430.00,1185.00,180,top
+C1,"SMD Cap","(unknown)",1490.00,1850.00,270,top
+R6,"R 0.25W","100",2375.00,1880.00,90,top
+R8,"R 0.25W","100",2270.00,1880.00,90,top
+R5,"R 0.25W","100",1375.00,1950.00,90,top
+R9,"R 0.25W","100",1855.00,2170.00,0,top
+R10,"R 0.25W","100",2160.00,1875.00,90,top
+U2,"ADC12138CIMSA","ADC12138",1796.36,1530.00,0,top
+R4,"R 0.25W","100",1815.00,1955.00,0,top
+C4,"SMD 0805","(unknown)",2070.00,2345.00,270,top
+R1,"R 0.25W","100",2180.00,2425.00,270,top
+R2,"R 0.25W","100",2400.00,2425.00,270,top
+U1,"LM13700","LM13700",1605.00,2435.00,180,top
+R3,"R 0.25W","100",2290.00,2425.00,270,top
+C3,"SMD 0805","(unknown)",2075.00,2555.00,90,top
+X1,"CTX169","20 MHz",2480.00,700.00,0,top
+C21,"SMD Cap","(unknown)",2465.00,1070.00,180,top
+C20,"SMD 0805","(unknown)",2620.00,2375.00,180,top
+C19,"SMD 0805","(unknown)",2830.00,2375.00,0,top
+C18,"SMD 0805","(unknown)",2710.00,1800.00,0,top
+J3,"AMP 745781-4","A2100-ND",769.09,1826.00,270,top
+J1,"3 TERM BLOCK","DK ED1602-ND",2091.00,2925.00,180,top
+U7,"OP-AMP","LTC1152",2725.00,2075.00,90,top
+R12,"R 0.5W","(unknown)",1035.00,2335.00,90,top
